# final_ba

./: .gitignore  README.md  demo_ba.ipynb  docker-compose.yml  main.py  pyproject.toml
dashboards/: grafana_datasource_modeling.json
provisioning/dashboards/: default.yaml
provisioning/datasources/: mysql.yaml
src/evaluation/: generate_eveluation.py  graph_analysis_stats.json
src/evaluation/eval_data_copy/: graph_analysis_stats.json  graph_classical_drift_search_metrics.json  graph_classical_global_search_metrics.json  graph_classical_local_search_metrics.json  graph_llm_drift_search_metrics.json  graph_llm_global_search_metrics.json  graph_llm_local_search_metrics.json  vector_dense_search_metrics.json  vector_hybrid_search_metrics.json  vector_sparse_search_metrics.json
src/evaluation/evaluation_visualisation/: visual_evaluation.py
src/evaluation/pipeline_evaluation_data/: graph_classical_drift_search_metrics.json  graph_classical_global_search_metrics.json  graph_classical_local_search_metrics.json  graph_llm_drift_search_metrics.json  graph_llm_global_search_metrics.json  graph_llm_local_search_metrics.json  vector_dense_search_metrics.json  vector_hybrid_search_metrics.json  vector_sparse_search_metrics.json
src/evaluation/question_answer_generator/: generate_qa.py  qa_data.json
src/ingestion_pipeline/: all_ingestion_pipeline.py  helper_functions.py
src/ingestion_pipeline/graph_classical_model_ingestion/: graph_classical_ingestion.py
src/ingestion_pipeline/vector_ingestion/: vector_ingestion.py
src/query_pipeline/: all_query_pipeline.py
(+7 files in other folders)
